perf(be): fix movie list N+1 and server-side upcoming pagination.
Batch-load movie relations in separate queries and paginate upcoming movies in SQL instead of in-memory.

Co-authored-by: Cursor <cursoragent@cursor.com>